--- a/style.css
+++ b/style.css
@@ -4,3 +4,95 @@
 *{
     font-family: 'Work Sans', sans-serif;  
 }
+
+.btn-primary{
+    border-radius: 10px;
+    color: white;
+    font-size: 1.25rem;
+    font-weight:700 ;
+    padding: 20px 25px;
+    cursor: pointer;
+    background: #ff900e;
+    border: 0;
+
+
+}
+
+
+header{
+    background-color: pink;
+    padding: 40px 240px;
+}
+
+.nav-titel{
+    font-size: 2.5rem;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+nav>ul{
+    display: flex;
+}
+nav li{
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+nav li a{
+    color: aqua;
+    text-decoration: none;
+}
+
+/* banner styles 
+ */
+
+ .banner-content{
+    max-width: 800px ;
+    text-align: center;
+    margin: 0 auto;
+   
+ }
+ .banner-titel{
+    font-size: 4rem;
+    font-weight: 700px;
+    color: yellow;
+ }
+ .banner-description{
+    color: magenta;
+
+ }
+
+ .banner-image img{
+  
+    margin-top: 20px;
+    
+    width: 100%;
+ }
+
+ /* responsive mobile */
+
+ @media screen  and ( max-width: 576px;){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+ }
+
+ /* tablet or medium */
+
+ @media screen and (min-width: 577px) and (max-width: 960px ) {
+    nav{ flex-direction: column;}
+    header{ 
+        padding: 50px;
+
+    }
+    
+ }
