--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: 'Work Sans', sans-serif;  
 }
 
+body{
+    max-width: 1600px;
+}
+
 .btn-primary{
     border-radius: 10px;
     color: white;
@@ -13,11 +17,9 @@
     padding: 20px 25px;
     cursor: pointer;
     background: #ff900e;
-    border: 0;
-
-
-}
-
+    margin-top: 20px;
+    border: 0;}
+    
 
 header{
     background-color: pink;
@@ -67,32 +69,71 @@ nav li a{
 
  }
 
- .banner-image img{
-  
-    margin-top: 20px;
-    
+ .banner-image img{margin-top: 20px;
     width: 100%;
  }
 
+
+ /* mais style 
+  */
+
+ main{
+    max-width: 1440px;
+    margin: 70px auto;  
+
+  }
+
+ .teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-container img{
+    /* width: 100%; */
+}
+.teams-image-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+   padding-left: 70px;
+   padding-right: 70px;
+}
+.teams-titel{
+    font-size: 2.8rem;
+}
+
+
+
+
  /* responsive mobile */
 
- @media screen  and ( max-width: 576px;){
+ @media screen  and ( max-width: 576px){
     header{
         padding: 20px;
     }
-    nav{
+    nav, .teams-container
+    {
         flex-direction: column;
     }
+    .teams-image-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
     
  }
 
  /* tablet or medium */
 
  @media screen and (min-width: 577px) and (max-width: 960px ) {
-    nav{ flex-direction: column;}
+    nav,
+    .teams-container{ flex-direction: column;}
     header{ 
         padding: 50px;
-
     }
     
  }
