--- a/style.css
+++ b/style.css
@@ -19,16 +19,26 @@ body{
     background: #ff900e;
     margin-top: 20px;
     border: 0;}
-    
+ 
+    .section-title{
+        font-size: 2.5rem;
+        font-weight: 700;
+        color: #131313;
+    }
+
+    .text-light-gray{
+        color: #727272;
+    }
+
+
+    /* shared style end */
 
 header{
     background-color: pink;
     padding: 40px 240px;
 }
 
-.nav-titel{
-    font-size: 2.5rem;
-}
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -62,11 +72,7 @@ nav li a{
  .banner-titel{
     font-size: 4rem;
     font-weight: 700px;
-    color: yellow;
- }
- .banner-description{
-    color: magenta;
-
+    color: #131313;
  }
 
  .banner-image img{margin-top: 20px;
@@ -105,6 +111,107 @@ nav li a{
 
 
 
+.features{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 130px;
+    gap: 20px;
+}
+
+.features-content .card{
+ padding: 30px;
+ margin-bottom: 20px;
+ border-radius: 8px;
+ background: #fff;
+ box-shadow: px 30px 30px 0px(rgba(177, 34, 34, 0.06));
+
+}
+.features .section-title{
+    border-left: 5px solid #ac5959;
+   padding-left: 20px;
+}
+
+.ten-years-badge{
+    border-radius: 8px;
+    background: #fff17e;
+    width: 342px;
+    padding: 40px;
+    position: relative;
+    bottom: 100px;
+
+}
+.ten-years-badge h2{
+    text-align: center;
+    font-size: 4rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.features-image img{
+    height: 90%;
+    margin-left: 100px;
+}
+
+  /* facts style  */
+
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid saddlebrown;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.facts-card-container .card-title{
+    margin-top: 5px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    color: #727272;
+}
+
+.sponsors{
+    text-align: center;
+}
+
+.sponsors-image-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+    gap: 40px;
+}
+.sponsors-image-container img{
+    width: 165px;
+}
+
+footer{
+    max-width: 1440px;
+    height: 100px;
+    background: #fff4e7;
+
+text-align: center;
+font-family: Work Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+padding-top: 40px;
+}
+
 
  /* responsive mobile */
 
@@ -112,18 +219,33 @@ nav li a{
     header{
         padding: 20px;
     }
-    nav, .teams-container
+    nav, 
+     .teams-container,
+     .facts-card-container,
+     .sponsors-image-container,
+     .features
     {
         flex-direction: column;
     }
     .teams-image-container{
         grid-template-columns: 1fr;
     }
-    .teams-container{
+    .teams-container .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
     }
-
+    
+    .facts-card-container{
+        gap: 25px; 
+    }
+    .features-image img{
+        width: 90%;
+        margin: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+    }
     
  }
 
@@ -131,7 +253,10 @@ nav li a{
 
  @media screen and (min-width: 577px) and (max-width: 960px ) {
     nav,
-    .teams-container{ flex-direction: column;}
+    .teams-container,
+    .sponsors-image-container,
+    .features
+    { flex-direction: column;}
     header{ 
         padding: 50px;
     }
